    (thanks to Tobias C. Rittweiler)  
  * bug fix: SB-EXT:COMPARE-AND-SWAP was non-atomic unless the compiler
    was able to infer the correct argument type for the object on which
    the CAS operation was being performed.
  * bug fix: copy propagation interfered with parallel assignment
    semantics in local calls. (reported by Paul Khuong)

changes in sbcl-1.0.9 relative to sbcl-1.0.8:
  * minor incompatible change: SB-SYS:OUTPUT-RAW-BYTES is deprecated.
  * enhancement: SB-EXT:FINALIZE accepts a :DONT-SAVE keyword argument,
    indicating the finalizer should be cancelled when SAVE-LISP-AND-DIE
    is called.
  * enhancement: default PRINT-OBJECT methods for classes, slot-definitions,
    and generic function now print the object identity for anonymous
    instances. (thanks to Attila Lendvai)
  * enhancement: as an extension to MOP, SBCL now supports SETF of
    STANDARD-INSTANCE-ACCESS and FUNCALLABLE-STANDARD-INSTANCE-ACCESS.
    (thanks to Attila Lendvai)
  * enhancement: sb-cover has an alternate annotation mode which puts
    the form annotations at the car of the form, instead of annotating
    it completely. The benefit of this mode is that it shows better
    which forms were instrumented by the compiler.
  * bug fix: new compiler transforms for MEMBER and ASSOC were affected
    by printer control variables. (reported by Dan Corkill)
  * bug fix: system leaked memory when delayed output was performed by
    the OS in smaller chunks then expected. (thanks to David Smith)
  * bug fix: system leaked memory when file streams were not closed 
    properly.
  * bug fix: large objects written to slow streams that were modified
    after the write could end up with the modified state written to
    the underlying file descriptor.
  * bug fix: multiple threads operating in parallel on the same stream
    could cause buffer-overflows.
  * bug fix: source location information is stored correctly 